# ccgx

./: README.md  ccgx.go  go.mod  go.sum
examples/helloworld/: .gitignore  CMakeLists.txt  go.mod  go.sum  helloworld.cc  helloworld.go
examples/helloworld/helloworld/: helloworld.go  helloworld.gx
internal/cmd/: root.go
internal/cmd/bind/: bind.go
internal/cmd/carchive/: carchive.go
internal/cmd/debug/: debug.go
internal/cmd/link/: link.go
internal/cmd/mod/: init.go  mod.go  tidy.go
internal/cmd/pack/: pack.go
internal/exec/: exec.go
internal/gotc/: gotc.go
internal/gxtc/: gxtc.go  os.go
internal/module/: module.go
tests/simplemodname/: CMakeLists.txt  go.mod  simplemodname.cc  simplemodname.gx
tests/urlmodname/: .gitignore  CMakeLists.txt  go.mod  urlmodname.cc  urlmodname.gx
